<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_detection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_detection"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/stop_detection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_detection"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/wifi_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wifi_level"
                android:layout_gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/pressure_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Pressure Level"
                android:layout_gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/magnetic_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Magnetic Level"
                android:layout_gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/temperature_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Temperature Level"
                android:layout_gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/possibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Leaving Possibility"
                android:layout_gravity="center"
                android:textSize="25sp"/>
        </LinearLayout>
    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</LinearLayout>
